syntax = "proto3";
package bonded_roles;
option java_package = "bisq.bonded_roles.protobuf";
option java_multiple_files = true;
import "common.proto";
import "network.proto";

enum BondedRoleType {
  MEDIATOR = 0;
  ARBITRATOR = 1;
  MODERATOR = 2;
  SECURITY_MANAGER = 3;
  RELEASE_MANAGER = 4;
  SEED_NODE = 10;
  ORACLE_NODE = 11;
  EXPLORER_NODE = 12;
  MARKET_PRICE_NODE = 13;
}
message AuthorizedOracleNode {
  network.NetworkId networkId = 1;
  string bondUserName = 2;
  string signature = 3;
}

message BondedRoleRegistrationRequest {
  string profileId = 1;
  string authorizedPublicKey = 2;
  BondedRoleType bondedRoleType = 3;
  string bondUserName = 4;
  string signatureBase64 = 5;
  map<string, network.Address> addressByNetworkType = 6;
}

message AuthorizedBondedRole {
  string profileId = 1;
  string authorizedPublicKey = 2;
  BondedRoleType bondedRoleType = 3;
  string bondUserName = 4;
  string signature = 5;
  map<string, network.Address> addressByNetworkType = 6;
  AuthorizedOracleNode oracleNode = 7;
}

enum AlertType {
  INFO = 0;
  WARN = 1;
  EMERGENCY = 2;
  BAN = 3;
}

message AuthorizedAlertData {
  string id = 1;
  sint64 date = 2;
  AlertType alertType = 3;
  optional string message = 4;
  bool haltTrading = 5;
  bool requireVersionForTrading = 6;
  optional string minVersion = 7;
  optional string bannedRoleProfileId = 8;
  optional BondedRoleType bannedBondedRoleType = 9;
}